--- a/src/Emulator/Cores/Sparc/SparcRegisters.tt
+++ b/src/Emulator/Cores/Sparc/SparcRegisters.tt
@@ -16,5 +16,15 @@
     DEFINES.Add("TARGET_SPARC");
 
     AFTER_WRITE_HOOKS.Add("PC", "AfterPCSet");
+
+    GENERAL_REGISTERS.AddRange(new[] { "R0", "R1", "R2", "R3", "R4", "R5" , "R6" , "R7" , "R8" , "R9",
+                                       "R10", "R11", "R12", "R13", "R14", "R15", "R16", "R17", "R18", "R19",
+                                       "R20", "R21", "R22", "R23", "R24", "R25", "R26", "R27", "R28", "R29",
+                                       "R30", "R31",
+
+                                       "ASR16", "ASR17", "ASR18", "ASR19", "ASR20", "ASR21", "ASR22", "ASR23", "ASR24", "ASR25",
+                                       "ASR26", "ASR27", "ASR28", "ASR29", "ASR30", "ASR31",
+
+                                       "PSR", "TBR", "Y", "PC", "NPC", "WIM" });
 #>
 <#@ include file="../Common/RegisterTemplate.tt" #>
