--- a/src/Emulator/Cores/Arm/ArmRegisters.tt
+++ b/src/Emulator/Cores/Arm/ArmRegisters.tt
@@ -14,5 +14,7 @@
     HEADER_FILE = "Emulator/Cores/tlib/arch/arm/cpu_registers.h";
 
     BEFORE_WRITE_HOOKS.Add("PC", "BeforePCWrite");
+
+    GENERAL_REGISTERS.AddRange(new[] { "R0", "R1", "R2", "R3", "R4", "R5", "R6", "R7", "R8", "R9", "R10", "R11", "R12", "R13", "R14", "R15" });
 #>
 <#@ include file="../Common/RegisterTemplate.tt" #>
