--- a/src/Emulator/Cores/RiscV/RiscVRegisters.tt
+++ b/src/Emulator/Cores/RiscV/RiscVRegisters.tt
@@ -11,5 +11,10 @@
 <#
     CLASS_NAME = "RiscV";
     HEADER_FILE = "Emulator/Cores/tlib/arch/riscv/cpu_registers.h";
+
+    GENERAL_REGISTERS.AddRange(new[] { "X0", "X1", "X2", "X3", "X4", "X5" , "X6" , "X7" , "X8" , "X9",
+                                       "X10", "X11", "X12", "X13", "X14", "X15", "X16", "X17", "X18", "X19",
+                                       "X20", "X21", "X22", "X23", "X24", "X25", "X26", "X27", "X28", "X29",
+                                       "X30", "X31", "PC" });
 #>
 <#@ include file="../Common/RegisterTemplate.tt" #>
