[FIX] Fix error message.

--- a/src/Emulator/Cores/Common/RegisterEnumParserContent.tt
+++ b/src/Emulator/Cores/Common/RegisterEnumParserContent.tt
@@ -136,7 +136,7 @@
             var match = Regex.Match(line, @"^\s*(?<name>[\p{L}0-9]+)(_(?<index>[0-9]+))?_(?<width>[0-9]+)\s*=\s*(?<value>[0-9]+)\s*,?\s*$");
             if(string.IsNullOrEmpty(match.Groups["name"].Value))
             {
-                throw new ArgumentException("Register name was in a wrong format");
+                throw new ArgumentException($"Register name was in a wrong format: {line}");
             }
 
             var regDesc = new RegisterDescriptor
