--- a/src/Emulator/Cores/RiscV/RiscV64Registers.tt
+++ b/src/Emulator/Cores/RiscV/RiscV64Registers.tt
@@ -9,8 +9,10 @@
 <#@ template language="C#" #>
 <#@ include file="../Common/RegisterTemplateDefinitions.tt" #>
 <#
-    CLASS_NAME = "RiscV";
+    CLASS_NAME = "RiscV64";
     HEADER_FILE = "Emulator/Cores/tlib/arch/riscv/cpu_registers.h";
+
+    DEFINES.Add("TARGET_RISCV64");
 
     GENERAL_REGISTERS.AddRange(new[] { "X0", "X1", "X2", "X3", "X4", "X5" , "X6" , "X7" , "X8" , "X9",
                                        "X10", "X11", "X12", "X13", "X14", "X15", "X16", "X17", "X18", "X19",
