--- a/src/Emulator/Main/Peripherals/Bus/SystemBusGenerated.tt
+++ b/src/Emulator/Main/Peripherals/Bus/SystemBusGenerated.tt
@@ -41,9 +41,9 @@ namespace Antmicro.Renode.Peripherals.Bus
         var type = entry.Key;
         var name = entry.Value;
 #>
-        public <#= type #> Read<#= name #>(long address)
+        public <#= type #> Read<#= name #>(ulong address)
         {
-            long startAddress, endAddress;
+            ulong startAddress, endAddress;
 
             InvokeWatchpointHooks(hooksOnRead, address, Width.<#=name#>);
 
@@ -60,7 +60,7 @@ namespace Antmicro.Renode.Peripherals.Bus
                 {
                     accessMethods.SetAbsoluteAddress(address);
                 }
-                return accessMethods.Read<#=name#>(address - startAddress);
+                return accessMethods.Read<#=name#>(checked((long)(address - startAddress)));
             }
             finally
             {
@@ -71,9 +71,9 @@ namespace Antmicro.Renode.Peripherals.Bus
             }
         }
 
-        public void Write<#=name#>(long address, <#=type#> value)
+        public void Write<#=name#>(ulong address, <#=type#> value)
         {
-            long startAddress, endAddress;
+            ulong startAddress, endAddress;
 
             var accessMethods = peripherals.FindAccessMethods(address, out startAddress, out endAddress);
             if (accessMethods == null)
@@ -90,7 +90,7 @@ namespace Antmicro.Renode.Peripherals.Bus
                 {
                     accessMethods.SetAbsoluteAddress(address);
                 }
-                accessMethods.Write<#=name#>(address - startAddress, value);
+                accessMethods.Write<#=name#>(checked((long)(address - startAddress)), value);
                 InvokeWatchpointHooks(hooksOnWrite, address, Width.<#=name#>);
             }
             finally
