--- a/src/Emulator/Cores/Arm-M/CortexMRegisters.tt
+++ b/src/Emulator/Cores/Arm-M/CortexMRegisters.tt
@@ -22,6 +22,6 @@
     REGISTERS_FROM_BASE_CLASS.Add("CPSR");
     REGISTERS_FROM_BASE_CLASS.Add("R");
 
-    // not setting general registers as they are the same as for CortexA
+    GENERAL_REGISTERS.AddRange(new[] { "R0", "R1", "R2", "R3", "R4", "R5", "R6", "R7", "R8", "R9", "R10", "R11", "R12", "R13", "R14", "R15" });
 #>
 <#@ include file="../Common/RegisterTemplate.tt" #>
