--- a/src/Emulator/Cores/RiscV/RiscV64Registers.tt
+++ b/src/Emulator/Cores/RiscV/RiscV64Registers.tt
@@ -18,5 +18,8 @@
                                        "X10", "X11", "X12", "X13", "X14", "X15", "X16", "X17", "X18", "X19",
                                        "X20", "X21", "X22", "X23", "X24", "X25", "X26", "X27", "X28", "X29",
                                        "X30", "X31", "PC" });
+                                       
+    UNSETTABLE_REGISTERS.AddRange(new[] {"X0"});
+
 #>
 <#@ include file="../Common/RegisterTemplate.tt" #>
