--- a/src/Emulator/Cores/RiscV/RiscV32Registers.tt
+++ b/src/Emulator/Cores/RiscV/RiscV32Registers.tt
@@ -14,6 +14,8 @@
 
     DEFINES.Add("TARGET_RISCV32");
 
+    BEFORE_WRITE_HOOKS.Add("PC", "BeforePCWrite");
+
     GENERAL_REGISTERS.AddRange(new[] { "X0", "X1", "X2", "X3", "X4", "X5" , "X6" , "X7" , "X8" , "X9",
                                        "X10", "X11", "X12", "X13", "X14", "X15", "X16", "X17", "X18", "X19",
                                        "X20", "X21", "X22", "X23", "X24", "X25", "X26", "X27", "X28", "X29",
