--- a/src/Emulator/Cores/RiscV/RiscV32Registers.tt
+++ b/src/Emulator/Cores/RiscV/RiscV32Registers.tt
@@ -1,6 +1,6 @@
 ﻿<#
 //
-// Copyright (c) 2010-2018 Antmicro
+// Copyright (c) 2010-2021 Antmicro
 //
 // This file is licensed under the MIT License.
 // Full license text is available in 'licenses/MIT.txt'.
@@ -15,6 +15,7 @@
     DEFINES.Add("TARGET_RISCV32");
 
     BEFORE_WRITE_HOOKS.Add("PC", "BeforePCWrite");
+    BEFORE_WRITE_HOOKS.Add("MTVEC", "BeforeMTVECWrite");
 
     GENERAL_REGISTERS.AddRange(new[] { "X0", "X1", "X2", "X3", "X4", "X5" , "X6" , "X7" , "X8" , "X9",
                                        "X10", "X11", "X12", "X13", "X14", "X15", "X16", "X17", "X18", "X19",
