--- a/src/Emulator/Cores/RiscV/RiscV32Registers.tt
+++ b/src/Emulator/Cores/RiscV/RiscV32Registers.tt
@@ -16,6 +16,7 @@
 
     BEFORE_WRITE_HOOKS.Add("PC", "BeforePCWrite");
     BEFORE_WRITE_HOOKS.Add("MTVEC", "BeforeMTVECWrite");
+    BEFORE_WRITE_HOOKS.Add("STVEC", "BeforeSTVECWrite");
 
     GENERAL_REGISTERS.AddRange(new[] { "X0", "X1", "X2", "X3", "X4", "X5" , "X6" , "X7" , "X8" , "X9",
                                        "X10", "X11", "X12", "X13", "X14", "X15", "X16", "X17", "X18", "X19",
