--- a/src/Emulator/Cores/Common/RegisterTemplateDefinitions.tt
+++ b/src/Emulator/Cores/Common/RegisterTemplateDefinitions.tt
@@ -1,6 +1,6 @@
 ﻿<#
 //
-// Copyright (c) 2010-2018 Antmicro
+// Copyright (c) 2010-2021 Antmicro
 // Copyright (c) 2011-2015 Realtime Embedded
 //
 // This file is licensed under the MIT License.
@@ -12,6 +12,9 @@
     string CLASS_NAME = null;
     string HEADER_FILE = null;
     string PC_REGISTER = null;
+    string FALLBACK_SET_REGISTER = null;
+    string FALLBACK_GET_REGISTER = null;
+    string FALLBACK_REGISTERS = null;
 
     var DEFINES = new List<string>();
     var BEFORE_WRITE_HOOKS = new Dictionary<string, string>();
