--- a/src/Emulator/Cores/RiscV/RiscV32Registers.tt
+++ b/src/Emulator/Cores/RiscV/RiscV32Registers.tt
@@ -11,9 +11,9 @@
 <#
     CLASS_NAME = "RiscV32";
     HEADER_FILE = "Emulator/Cores/tlib/arch/riscv/cpu_registers.h";
-    FALLBACK_SET_REGISTER = "TrySetCustomCSR";
-    FALLBACK_GET_REGISTER = "TryGetCustomCSR";
-    FALLBACK_REGISTERS = "GetCustomCSRs";
+    FALLBACK_SET_REGISTER = "TrySetNonMappedRegister";
+    FALLBACK_GET_REGISTER = "TryGetNonMappedRegister";
+    FALLBACK_REGISTERS = "GetNonMappedRegisters";
 
     DEFINES.Add("TARGET_RISCV32");
 
