[#30204] xtensa Add remaining registers (incl. masked `PS*` registers)
The TranslationCPU's GetRegistersValues needs to be modified to include
the NonMapped registers.

--- a/src/Emulator/Cores/Xtensa/XtensaRegisters.tt
+++ b/src/Emulator/Cores/Xtensa/XtensaRegisters.tt
@@ -12,8 +12,14 @@
     CLASS_NAME = "Xtensa";
     HEADER_FILE = "Emulator/Cores/tlib/arch/xtensa/cpu_registers.h";
 
+    FALLBACK_SET_REGISTER = "TrySetNonMappedRegister";
+    FALLBACK_GET_REGISTER = "TryGetNonMappedRegister";
+    FALLBACK_REGISTERS = "GetNonMappedRegisters";
+
     GENERAL_REGISTERS.AddRange(new[] { "AR0", "AR1", "AR2", "AR3", "AR4", "AR5" , "AR6" , "AR7" , "AR8" , "AR9",
                                        "AR10", "AR11", "AR12", "AR13", "AR14", "AR15", "PC" });
 
+    // TODO: Check if there are more read-only registers.
+    UNSETTABLE_REGISTERS.AddRange(new[] { "INTERRUPT" });
 #>
 <#@ include file="../Common/RegisterTemplate.tt" #>
