[#37655] RegisterEnumParser: Add comments support

--- a/src/Emulator/Cores/Common/RegisterEnumParserContent.tt
+++ b/src/Emulator/Cores/Common/RegisterEnumParserContent.tt
@@ -1,4 +1,4 @@
-<#
+﻿<#
 //
 // Copyright (c) 2010-2018 Antmicro
 // Copyright (c) 2011-2015 Realtime Embedded
@@ -118,14 +118,21 @@
 
         private void InsideEnumHandler(string line)
         {
-            if(line.Trim().StartsWith(BeginningOfIfder, StringComparison.CurrentCulture))
+            // Trim lines with single line comment only
+            line = Regex.Replace(line, @"^(\s*//.*)$", "").Trim();
+            if(line.Length == 0)
+            {
+                return;
+            }
+
+            if(line.StartsWith(BeginningOfIfder, StringComparison.CurrentCulture))
             {
                 var value = line.Replace(BeginningOfIfder, string.Empty).Trim();
                 modes.Push(defines.Contains(value) ? Mode.InsideDefinedIfdef : Mode.InsideUndefinedIfdef);
                 return;
             }
 
-            if(line.Trim() == EndOfEnum)
+            if(line == EndOfEnum)
             {
                 modes.Pop();
                 return;
@@ -133,7 +140,7 @@
 
             // e.g., R_0_32 = 147,
             // X_32 = 155,
-            var match = Regex.Match(line, @"^\s*(?<name>[\p{L}0-9]+)(_(?<index>[0-9]+))?_(?<width>[0-9]+)\s*=\s*(?<value>((0x)?[0-9a-fA-F]+)|([0-9]+))\s*,?\s*$");
+            var match = Regex.Match(line, @"^(?<name>[\p{L}0-9]+)(_(?<index>[0-9]+))?_(?<width>[0-9]+)\s*=\s*(?<value>((0x)?[0-9a-fA-F]+)|([0-9]+))\s*,?$");
             if(string.IsNullOrEmpty(match.Groups["name"].Value))
             {
                 throw new ArgumentException($"Register name was in a wrong format: {line}");
