--- a/src/Emulator/Main/Peripherals/Bus/SystemBusGenerated.tt
+++ b/src/Emulator/Main/Peripherals/Bus/SystemBusGenerated.tt
@@ -70,7 +70,7 @@ namespace Antmicro.Renode.Peripherals.Bus
             {
                 return (<#= type #>)ReportNonExistingRead(address, SysbusAccessWidth.<#=name#>);
             }
-            if(!IsTargetAccessible(accessMethods.Peripheral))
+            if(!IsPeripheralEnabled(accessMethods.Peripheral))
             {
                 this.Log(LogLevel.Warning, "Tried to read a locked peripheral: {0}. Address 0x{1:X}.", accessMethods.Peripheral, address);
                 return 0;
@@ -115,7 +115,7 @@ namespace Antmicro.Renode.Peripherals.Bus
                 ReportNonExistingWrite(address, value, SysbusAccessWidth.<#=name#>);
                 return;
             }
-            if(!IsTargetAccessible(accessMethods.Peripheral))
+            if(!IsPeripheralEnabled(accessMethods.Peripheral))
             {
                 this.Log(LogLevel.Warning, "Tried to write a locked peripheral: {0}. Address 0x{1:X}, value 0x{2:X}", accessMethods.Peripheral, address, value);
                 return;
