--- a/src/Emulator/Main/Peripherals/Bus/SystemBusGenerated.tt
+++ b/src/Emulator/Main/Peripherals/Bus/SystemBusGenerated.tt
@@ -1,6 +1,6 @@
 ﻿<#
 //
-// Copyright (c) 2010-2022 Antmicro
+// Copyright (c) 2010-2023 Antmicro
 // Copyright (c) 2011-2015 Realtime Embedded
 //
 // This file is licensed under the MIT License.
@@ -35,6 +35,8 @@ using Antmicro.Renode.Peripherals.Bus;
 using Antmicro.Renode.Peripherals.Bus.Wrappers;
 using Antmicro.Renode.Peripherals.CPU;
 using Antmicro.Renode.Utilities.Collections;
+
+using Range = Antmicro.Renode.Core.Range;
 
 namespace Antmicro.Renode.Peripherals.Bus
 {
